--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,13 @@ nav .nav_liens a
     color: #000;
 }
 
+.nbr_projets
+{
+    padding: 8px 0;
+    font-size: 12px;
+    font-weight: 600;
+}
+
 .liste_projets
 {
     display: grid;
@@ -419,28 +426,88 @@ nav .nav_liens a
 .nouveau_projet
 {
     margin-top: 16px;
+    background: #FFF;
+    border: 1px solid var(--border);
+    padding: 16px;
+    border-radius: 5px;
+}
+
+.nouveau_projet .erreur
+{
+    box-shadow: 0 0 0 1px #e0b4b4 inset,0 0 0 0 transparent;
+    background-color: #fff6f6;
+    color: #9f3a38;
+    padding: 1em 1.5em;
+}
+
+.nouveau_projet .succes
+{
+    box-shadow: 0 0 0 1px #a3c293 inset,0 0 0 0 transparent;
+    background-color: #fcfff5;
+    color: #2c662d;
+    padding: 1em 1.5em;
+}
+
+.nouveau_projet form
+{
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .nouveau_projet label
 {
     font-weight: 600;
+    display: block;
+    margin-bottom: 8px;
+    font-size: 11px;
+    color: rgba(0,0,0,.87);
+    text-align: left;
 }
 
 .nouveau_projet .form_ligne
 {
-    display: grid;
-    align-items: center;
-    grid-template-columns: repeat(2, 49%);
-    column-gap: 10px;
-    padding: 8px 0;
+    width: 100%;
+    padding: 16px 0;
+}
+
+.nouveau_projet .ajouter_image
+{
+    height: 400px;
+    background: #FFF;
+    border: 2px dashed var(--border);
+    position: relative;
+}
+
+.nouveau_projet .ajouter_image .icon
+{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: calc(25% + 65px);
+    right: calc(25% + 170px);
+}
+
+.nouveau_projet .ajouter_image img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.nouveau_projet .ajouter_image:hover
+{
+    cursor: pointer;
 }
 
 .nouveau_projet .form_ligne input[type="text"],
 .nouveau_projet textarea
 {
     width: 100%;
-    padding: 8px;
+    display: block;
+    padding: 10px;
     border: 1px solid var(--border);
+    border-radius: 5px;
 }
 
 .nouveau_projet textarea
@@ -453,15 +520,15 @@ nav .nav_liens a
 .nouveau_projet button
 {
     display: block;
-    width: 25%;
+    width: 10%;
     margin: 16px auto 0 auto;
     background: var(--orange);
     color: #FFF;
-    padding: 8px 16px;
+    padding: 10px 8px;
     border: none;
     border-radius: 5px;
-    font-weight: 600;
     cursor: pointer;
+    font-size: 12px;
 }
 
 /*********************************************************
