--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,12 @@ nav .nav_liens a
     color: var(--orange_clair);
 }
 
+nav .nav_liens a i
+{
+    vertical-align: text-bottom;
+    margin-right: 5px;
+}
+
 nav .nav_liens a.actif
 {
     color: var(--orange);
@@ -122,6 +128,27 @@ nav .nav_liens a:hover
 {
     color: var(--orange);
     transition-duration: .3s;
+}
+
+.dropdown
+{
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 102px;
+    background: #FFF;
+    padding: 16px;
+    border: 1px solid var(--orange);
+}
+
+.dropdown.is_visible
+{
+    display: block;
+}
+
+.dropdown_lien
+{
+    padding: 8px 0;
 }
 
 .container
@@ -537,7 +564,7 @@ nav .nav_liens a:hover
 .administration .tbl_contenu
 {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     align-items: center;
     padding: 8px;
     max-height: 120px;
@@ -562,26 +589,69 @@ nav .nav_liens a:hover
 .administration .tbl_contenu
 {
     border-bottom: 1px solid var(--border);
-    margin: 32px 0;
+    /*margin: 32px 0;*/
+}
+
+.administration .tbl_contenu.brouillon 
+{
+    background: #9adfff;
 }
 
 .administration .tbl_contenu img
 {
     width: 70%;
     height: 100px;
+    object-fit: cover;
+}
+
+.administration .tbl_contenu .label_brouillon
+{
+    font-size: 13px;
+    font-style: italic;
 }
 
 .administration .tbl_actions
 {
     display: flex;
     justify-content: end;
+    align-items: center;
 }
 
-.administration .tbl_actions .icon
+.administration .tbl_actions .icon_more
 {
-    width: 20px;
-    height: 20px;
     cursor: pointer;
+}
+
+.administration .tbl_actions .icon_more:hover
+{
+    color: var(--orange);
+}
+
+.administration .tbl_actions .btn_administration
+{
+    border: none;
+    border-radius: 5px;
+    font-size: 12px;
+    color: #FFF;
+    padding: 8px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.administration .tbl_actions .btn_administration i
+{
+    margin-right: 5px;
+}
+
+.administration .tbl_actions .btn_administration.editer
+{
+    background: #00a800;
+}
+
+.administration .tbl_actions .btn_administration.brouillon
+{
+    background: #6868f8;
 }
 
 .nouveau_projet
@@ -629,18 +699,28 @@ nav .nav_liens a:hover
     cursor: pointer;
 }
 
+.nouveau_projet .form_footer
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .nouveau_projet button
 {
-    display: block;
-    width: 10%;
-    margin: 16px auto 0 auto;
+    margin: 16px 8px;
     background: var(--orange);
     color: #FFF;
-    padding: 10px 8px;
+    padding: 10px 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 12px;
+}
+
+.nouveau_projet .btn_enregistrer_brouillon
+{
+    background: #115cff;
 }
 
 /*********************************************************
