--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,7 @@ nav .avatar
     min-height: 210px;
 }
 
-.projet .description_projet .see_more
+.projet .description_projet .btn_lire_projet
 {
     color: var(--links);
 }
@@ -583,7 +583,7 @@ nav .avatar
 .formulaire_connexion form
 {
     width: 30%;
-    margin: 0 auto;
+    margin: 32px auto;
 }
 
 .formulaire_connexion button
@@ -843,18 +843,77 @@ nav .avatar
 .nouveau_projet button
 {
     margin: 16px 8px;
-    background: var(--orange);
+    background: #388E3C;
     color: #FFF;
-    padding: 10px 16px;
+    padding: 14px 16px;
     border: none;
-    border-radius: 5px;
+    border-radius: 2px;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 11px;
+    text-transform: uppercase;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
 }
 
 .nouveau_projet .btn_enregistrer_brouillon
 {
-    background: #115cff;
+    background: #1976D2;
+}
+
+.nouveau_projet .tags_container
+{
+    padding: 16px 0;
+    text-align: left;
+}
+
+.nouveau_projet .tags_container .tag 
+{
+    background: #eee;
+    border-radius: 3px 0 0 3px;
+    color: #999;
+    display: inline-block;
+    height: 26px;
+    line-height: 26px;
+    padding: 0 20px 0 23px;
+    position: relative;
+    margin: 0 10px 10px 0;
+    font-size: 10px;
+}
+
+.nouveau_projet .tags_container .tag::before
+{
+    background: #FFF;
+    border-radius: 10px;
+    box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+    content: '';
+    height: 6px;
+    left: 10px;
+    position: absolute;
+    width: 6px;
+    top: 10px;
+}
+
+.nouveau_projet .tags_container .tag::after 
+{
+    background: #fff;
+    border-bottom: 13px solid transparent;
+    border-left: 10px solid #eee;
+    border-top: 13px solid transparent;
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.nouveau_projet .tags_container .tag:hover 
+{
+    background-color: crimson;
+    color: white;
+    cursor: pointer;
+}
+  
+.nouveau_projet .tags_container .tag:hover::after 
+{
+    border-left-color: crimson; 
 }
 
 /*********************************************************
