--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,15 @@ nav .avatar
 
 .dropdown_lien
 {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    align-items: center;
     padding: 8px 0;
+}
+
+.dropdown .dropdown_lien a
+{
+    color: #000;
 }
 
 .container
@@ -940,10 +948,58 @@ nav .avatar
     text-align: center;
 }
 
-.compte_content .avatar_container img
+.compte_content .avatar_container .avatar
 {
+    position: relative;
     width: 50%;
+    padding-top: 50%;
+    height: 0;
+    margin: 0 auto;
+}
+
+.compte_content .avatar_container .avatar img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #FFF;
     border: 1px solid var(--border);
+    object-fit: cover;
+}
+
+.compte_content .avatar_container input
+{
+    display: none;
+}
+
+.compte_content .avatar_container .modifier_avatar
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #0000008c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+    opacity: 0;
+    transition-duration: .3s;
+}
+
+.compte_content .avatar_container .modifier_avatar:hover
+{
+    cursor: pointer;
+    opacity: 1;
+    transition-duration: .3s;
+}
+
+.compte_content .avatar_container .modifier_avatar i
+{
+    font-size: 70px;
 }
 
 .compte_content .infos_container .libelle_parametres
